Shut external access in favour of ssh and local HTTP connections

--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -3,11 +3,14 @@
 	<head><title>Start Stacker</title></head>
 
 	<body>
-		<form action="/start">
-			<input id="start_btn" type="submit"value="Start"/>
-		</form>
-		<form action="/stop">
-			<input id="stop_btn" type="submit" value="Stop"/>
-		</form>
+		<div id="start_btn" class="button">
+			<a href="/start">Start</a>
+		</div>
+		<div id="stop_btn" class="button">
+			<a href="/stop">Stop</a>
+		</div>
+		<div id="reverse_btn" class="button">
+			<a href="/reverse">Reverse</a>
+		</div>
 	</body>
 </html>
