Fixed typo in page title
Fixed typo in title

--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head><title>Start Stacker</title></head>
+	<head><title>Star Tracker</title></head>
 
 	<body>
 		<div id="start_btn" class="button">
