Adding fast move

--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -23,11 +23,11 @@
 	</div>
 	<div align=center>
 		<button id="slower_btn" class="pure-button">
-			<a href="/slower">-</a>
+			<a href="/slower">--</a>
 		</button>
 		<label> Speed </label>		
 		<button id="faster_btn" class="pure-button">
-			<a href="/faster">+</a>
+			<a href="/faster">++</a>
 		</button>
 	</div>
 	</body>
